# coffee-grinder-v2

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  BUGFIX_REPORT.md  Dockerfile  Makefile  README.md  cronjob  docker-compose.yml  project_structure.txt  pyproject.toml
.roo/rules/: cofee-grinder-v2-get-news.md
data/: gnews_io_categories.json  gnews_io_languages.json  gnews_io_parameters.json  mediastack_com_categories.json  mediastack_com_languages.json  mediastack_com_parameters.json  mediastack_com_sources.json  news_parsing_config.json  news_sources.json  newsapi_org_languages.json  newsapi_org_parameters.json  newsdata_io_categories.json  newsdata_io_languages.json  newsdata_io_parameters.json  thenewsapi_com_categories.json  thenewsapi_com_languages.json  thenewsapi_com_parameters.json
scripts/: README.md  README_gnews.md  README_mediastack.md  README_newsapi.md  README_newsdata.md  README_thenewsapi.md  available_categories.txt  check_data_completeness.py  check_sheets_content.py  debug_api_response.py  debug_sheets_export.py  debug_thenewsapi.py  debug_with_raw_response.py  get news_sources.py  get_categories.py  get_news_sources.py  newsdata_io_doc.html  newsdata_io_doc.txt  prd.txt  test_fetch_news_method.py  test_fetcher_manual.py  test_gnews_integration.py  test_google_sheets_export.py  test_mediastack_integration.py  test_news_chain_manual.py  test_newsapi_provider.py  test_newsapi_quick.py  test_pipeline_without_sheets.py  test_real_pipeline.py  test_rubrics_pipeline.py  test_sources_availability.py  test_updated_fetch_news.py
src/: config.py  healthcheck.py  logger.py  openai_client.py  run.py
src/api/: __init__.py
src/api/routers/: __init__.py  news.py
src/langchain/: __init__.py  image_chain.py  news_chain.py  presentation_chain.py
src/services/: __init__.py
src/services/audio/: tts_processor.py
src/services/images/: image_processor.py
src/services/news/: __init__.py  deduplicftor_rank.py  exporter.py  fetcher_fabric.py  news_processor.py  pipeline.py  rubrics_config.py  runner.py
src/services/news/fetchers/: __init__.py  base.py  gnews_io.py  mediastack_com.py  newsapi_org.py  newsdata_io.py  thenewsapi_com.py
src/services/presentations/: ppt_generator.py
src/utils/: input_validator.py
src/webapp/: __init__.py  main.py
src/webapp/frontend/: Dockerfile  index.html  tailwind.config.js  vite.config.ts
src/webapp/frontend/src/: App.tsx  index.css  main.tsx
src/webapp/frontend/src/components/: ConfigEditor.tsx  StatusDashboard.tsx
src/webapp/static/css/: style.css
src/webapp/static/js/: app.js
src/webapp/templates/: index.html
tests/: test_config.py  test_healthcheck.py  test_logger.py  test_news_module_isolation.py  test_newsdata_io_settings.py  test_openai_client.py  test_run.py  test_runner_migration.py
tests/langchain/: __init__.py  test_news_chain.py
tests/services/: __init__.py
tests/services/news/: __init__.py  test_exporter.py  test_fetcher_fabric.py  test_news_processor.py  test_pipeline.py  test_rubrics_config.py
tests/services/news/fetchers/: __init__.py  test_base.py  test_gnews_io.py  test_mediastack_com.py  test_newsapi_org.py  test_newsdata_io.py  test_thenewsapi_com.py
tests/utils/: test_input_validator.py
